@startuml

title __VENTEENLIGNE's Class Diagram__\n

  package venteEnLigne {
    class Author {
        - id : int
        - firstName : String
        - lastName : String
        + Author()
        + Author()
        + getId()
        + setId()
        + getFirstName()
        + setFirstName()
        + getLastName()
        + setLastName()
    }
  }
  

  package venteEnLigne {
    class Book {
        - nbPage : int
        + getNbPage()
        + setNbPage()
        + Book()
        + Book()
        + getNetPrice()
    }
  }
  

  package venteEnLigne {
    class Cart {
        - cartRowSet : HashSet<CartRow>
        + addMediaToCart()
        - isElementOfCart()
        + removeMediaFromCart()
        + getCartRowSet()
        + getNetTotalPrice()
        + toString()
    }
  }
  

  package venteEnLigne {
    class CartRow {
        - quantity : int
        + CartRow()
        + increment()
        + decrement()
        + getMedia()
        + getQuantity()
    }
  }
  

  package venteEnLigne {
    class Cd {
        - nbPage : int
        + getNbPage()
        + setNbPage()
        + Cd()
        + Cd()
        + getNetPrice()
    }
  }
  

  package venteEnLigne {
    class Dvd {
        - zone : int
        + getZone()
        + setZone()
        + Dvd()
        + Dvd()
        + getNetPrice()
    }
  }
  

  package venteEnLigne {
    interface IMedia {
        {abstract} + getPrice()
        {abstract} + setPrice()
        {abstract} + getId()
        {abstract} + setId()
        {abstract} + getTitle()
        {abstract} + setTitle()
        {abstract} + getPublisher()
        {abstract} + setPublisher()
        {abstract} + getAuthorList()
        {abstract} + getNetPrice()
        {abstract} + setAuthorList()
    }
  }
  

  package venteEnLigne {
    abstract class Media {
        - price : double
        - id : int
        - title : String
        - authorList : List<Author>
        + Media()
        + Media()
        + getPrice()
        + setPrice()
        + getId()
        + setId()
        + getTitle()
        + setTitle()
        + getPublisher()
        + setPublisher()
        + getAuthorList()
        + setAuthorList()
    }
  }
  

  package venteEnLigne {
    class MediaMain {
        {static} + main()
    }
  }
  

  package venteEnLigne {
    class Publisher {
        - id : int
        - name : String
        + Publisher()
        + Publisher()
        + getId()
        + setId()
        + getName()
        + setName()
    }
  }
  

  Book -up-|> Media
  CartRow o-- IMedia : media
  Cd -up-|> Media
  Dvd -up-|> Media
  Media -up-|> IMedia
  Media o-- Publisher : publisher


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
